Header shrink: flicker bug fix

--- a/Css/header.scss
+++ b/Css/header.scss
@@ -37,7 +37,7 @@ header {
       align-items: stretch;
 
       .navbar-brand {
-        transition: 0.2s;
+        transition: 0.275s;
         padding: 0.6rem 0 0.9rem;
         width: 100px;
 
